Eet 1.6.0

Changes since Eet 1.5.0:
--------------------------

Additions:
    * eet_file_get to return filenames of Eet_Files

Improvements:

    * most allocations moved to mempools

Eet 1.5.0

Changes since Eet 1.4.0:
--------------------------

Additions:

    * EET_DATA_DESCRIPTOR_ADD_LIST_STRING API for string lists
    * eet_node API's to manipulate nodes
    * eet_alias_get API
    * eet_data_xattr_cipher_get and eet_data_xattr_cipher_set APIs
    * EET_DATA_DESCRIPTOR_ADD_BASIC_ARRAY API

Fixes:

    * eet shutdown on windows
    * test case to init eet
    * compilation against libjpeg 8 on windows
    * binary open on windows
    * unopenable empty eet file for read/write

Improvements:

    * better speed and memory footprint of EET_G_UNION and EET_G_ARRAY
    * use stringshare for mmaped file names
    * use eina locking wrappers
    * use eina_file for file IO
    * jpeg encode and decode quality improved at expense of speed